# Module_1

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  parse_single.py  pyproject.toml  requirements-dev.txt  requirements-docling.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
data/benchmark/metadata/: ADev_Resume.json
data/benchmark/templates/: scaffold_manifest.json
data/ground_truth/: ADev_Resume.truth.json
data/output/: resume_dataset_eval.json  resume_dataset_eval_after_fix.json
data/resumes/reviewed/: README.md
docs/: API.md  annotation_workflow.md  benchmarking.md  company_grade_parser_roadmap.md
resume_segmentation/: __init__.py
scripts/: benchmark.py  build_manifest.py  check_truth_pack.py  error_analysis.py  evaluate.py  evaluate_resume_dataset.py  normalize_resume_dataset.py  scaffold_benchmark_pack.py  test_old_resumes.py  validate_resume_dataset_schema.py
src/resume_segmentation/: __init__.py  cli.py  settings.py  worker.py
tests/: test_core_parsing.py  test_dataset_regressions.py  test_document_text_extractor.py  test_edge_cases.py  test_enrichment.py  test_extraction_regression.py  test_extractor_fusion.py  test_full_pipeline.py  test_input_quality_and_source_locator.py  test_integration.py  test_language_policy.py  test_layout_and_provenance.py  test_ontology_and_parser_integration.py  test_projects_parser.py  test_resume_dataset_normalizer.py  test_resume_dataset_schema.py  test_resume_validation.py  test_skill_ontology_integration.py  test_validation_repair.py
(+103 files in other folders)
